[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="bg" type="Panel" parent="Settings"]
self_modulate = Color( 0, 0, 0, 0.611765 )
anchor_bottom = 1.0
margin_left = 264.0
margin_top = 96.0
margin_right = 576.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ms" type="Label" parent="Settings"]
margin_left = 272.0
margin_top = 112.0
margin_right = 384.0
margin_bottom = 126.0
text = "Mouse Sensitivity"

[node name="m_sensitivity" type="HSlider" parent="Settings/ms"]
margin_left = 48.0
margin_top = 24.0
margin_right = 240.0
margin_bottom = 40.0
min_value = 0.02
max_value = 0.18
step = 0.02
value = 0.1

[node name="resolution" type="Label" parent="Settings"]
margin_left = 272.0
margin_top = 176.0
margin_right = 384.0
margin_bottom = 190.0
text = "Stretch Mode"

[node name="v_m" type="CheckBox" parent="Settings/resolution"]
margin_left = 40.0
margin_top = 32.0
margin_right = 164.0
margin_bottom = 56.0
text = "Viewport Mode"

[node name="fs_lbl" type="Label" parent="Settings"]
margin_left = 272.0
margin_top = 248.0
margin_right = 312.0
margin_bottom = 262.0
text = "FullScreen"

[node name="fullscreen" type="CheckBox" parent="Settings/fs_lbl"]
margin_left = 40.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 56.0
text = "Enabled"

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.133333 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.498039 )
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = -32.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu_b" type="Button" parent="."]
anchor_top = 0.44
anchor_bottom = 0.44
margin_left = 64.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 16.0
text = "< Quit Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_b" type="Button" parent="."]
anchor_top = 0.28
anchor_bottom = 0.28
margin_left = 64.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 16.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_b" type="Button" parent="."]
anchor_top = 0.36
anchor_bottom = 0.36
margin_left = 64.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 16.0
text = "Settings"

[connection signal="value_changed" from="Settings/ms/m_sensitivity" to="." method="_on_m_sensitivity_value_changed"]
[connection signal="toggled" from="Settings/resolution/v_m" to="." method="_on_v_m_toggled"]
[connection signal="toggled" from="Settings/fs_lbl/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="menu_b" to="." method="_on_menu_b_pressed"]
[connection signal="pressed" from="resume_b" to="." method="_on_resume_b_pressed"]
[connection signal="pressed" from="settings_b" to="." method="_on_settings_b_pressed"]
